--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 	
 	<div class="container">
 		<div class="menu">
-			<a href="./lateralidad">Izquierda o derecha</a>
-			<a href="./menor">Busca el menor</a>
-			<a href="./mayor">Busca el mayor</a>
-			<a href="./compara">Compara</a>
-			<a href="./compara-en-orden">Compara en un orden</a>
-			<a href="./secuencia_temporal">Secuencia temporal</a>
+			<a href="lateralidad">Izquierda o derecha</a>
+			<a href="menor">Busca el menor</a>
+			<a href="mayor">Busca el mayor</a>
+			<a href="compara">Compara</a>
+			<a href="compara-en-orden">Compara en un orden</a>
+			<a href="secuencia_temporal">Secuencia temporal</a>
 		</div>
 	</div>
 </body>
