antes y despues en secuencias temporales

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 			<a href="menor">Busca el menor</a>
 			<a href="mayor">Busca el mayor</a>
 			<a href="compara">Compara</a>
-			<a href="compara-en-orden">Compara en un orden</a>
+			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
+			<a href="despues">Despues en el tiempo</a>
+			<a href="antes">Antes en el tiempo</a>
 		</div>
 	</div>
 </body>
