--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 	
 	<div class="container">
 		<div class="menu">
+			<a href="lateralidad-ayudada">Izquierda o derecha (con ayuda)</a>
 			<a href="lateralidad">Izquierda o derecha</a>
 			<a href="menor">Busca el menor</a>
 			<a href="mayor">Busca el mayor</a>
-			<a href="compara">Compara</a>
+			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
 			<a href="despues">Despues en el tiempo</a>
