extremos de secuencia temporal

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 		<div class="menu">
 			<a href="lateralidad-ayudada">Izquierda o derecha (con ayuda)</a>
 			<a href="lateralidad">Izquierda o derecha</a>
-			<a href="menor">Busca el menor</a>
-			<a href="mayor">Busca el mayor</a>
+			<a href="menor">La mas pequeña</a>
+			<a href="mayor">La mas grande</a>
 			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
+			<a href="primero_temporal">Primero en el tiempo</a>
+			<a href="ultimo_temporal">Ultimo en el tiempo</a>
 			<a href="despues">Despues en el tiempo</a>
 			<a href="antes">Antes en el tiempo</a>
 		</div>
