--- a/ultimo_temporal/index.html
+++ b/ultimo_temporal/index.html
@@ -17,7 +17,7 @@
 		<canvas id="canvas" width=100 height= 100></canvas>
 	</div>
 	<div class="out-text">
-   		<p id="mensaje"></p>
+   		<p id="mensaje">¿Qué color aparece al último?</p>
 	</div>
 	<hr>
 	<div class="teclado">
