--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<a href="menor">La mas pequeña</a>
 			<a href="mayor">La mas grande</a>
 			<a href="mediano">La barra mediana</a>
+			<a href="compara_par_desigual">Compara par desigual</a>
 			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
