ajustes en comparacion de tamaños desiguales

--- a/chica/index.html
+++ b/chica/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Comparación de desiguales</title>
+	<title>Pequeña</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../style.css">				
@@ -14,19 +14,19 @@
 		<canvas id="canvas" width=100 height= 100></canvas>
 	</div>
 	<div class="out-text">
-   		<p id="mensaje">Compara las barras</p>
+   		<p id="mensaje">¿De que color es la mas pequeña?</p>
 	</div>
 	<hr>
 	<div class="teclado">
 		<div class="botonera">
-			<button class="boton"></button>
-			<button class="boton"></button>
+			<button id="boton1" class="boton"></button>
+			<button id="boton2" class="boton"></button>
 		</div>
 	</div>
-	
-	<audio id="buena" src="../sonidos/buena.mp3"></audio>
-	<audio id="fanfare" src="../sonidos/fanfare.mp3"></audio>
 
+	<audio id="buena" src="../sonidos/buena.mp3"></audio>
+	<audio id="fanfare" src="../sonidos/fanfare.mp3"></audio>	
+	
 	<script src="main.js"></script>
 
 </body>
