--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 			<a href="lateralidad">Izquierda o derecha</a>
 			<a href="menor">La mas pequeña</a>
 			<a href="mayor">La mas grande</a>
-			<a href="mediano">La barra mediana</a>
-			<a href="compara_par_desigual">Compara par desigual</a>
+			<a href="chica">La pequeña</a>
+			<a href="grande">La grande</a>
+			<a href="mediano">La mediana</a>
 			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
