--- a/donde_hay_menos/index.html
+++ b/donde_hay_menos/index.html
@@ -8,15 +8,16 @@
 	<style>
 		.out-canvas {
 			flex-direction: column;
-			height: 75vh;
+			height: 70vh;
 		}
 
 		img {
+			height:50%;
 			padding: 20px;
 		}
 
 		.out-text {
-			height: 17vh;
+			height: 19vh;
 			align-items: top;
 		}
 	</style>
