--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 			<a href="mediano">La mediana</a>	
 			<a href="donde_hay_mas">Donde hay mas</a>
 			<a href="donde_hay_menos">Donde hay menos</a>
+			<a href="igual">Igual</a>
+			<a href="diferente">Diferente</a>
 			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
