--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<a href="donde_hay_menos">Donde hay menos</a>
 			<a href="igual">Igual</a>
 			<a href="diferente">Diferente</a>
+			<a href="parecido">Parecido</a>
 			<a href="compara">Compara tamaños</a>
 			<a href="compara-en-orden">Comparacion escalonada</a>
 			<a href="secuencia_temporal">Secuencia temporal</a>
