--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 			<a href="mayor">La mas grande</a>
 			<a href="chica">La pequeña</a>
 			<a href="grande">La grande</a>
-			<a href="mediano">La mediana</a>	
+			<a href="mediano">La mediana</a>
+			<a href="menos_grande">La menos grande</a>
+			<a href="menos_chica">La menos pequeña</a>
 			<a href="donde_hay_mas">Donde hay mas</a>
 			<a href="donde_hay_menos">Donde hay menos</a>
 			<a href="igual">Igual</a>
