--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<a href="ultimo_temporal">Ultimo en el tiempo</a>
 			<a href="despues">Despues en el tiempo</a>
 			<a href="antes">Antes en el tiempo</a>
-
+			<a href="decenas-centenas">Sistema decimal</a>
 		</div>
 	</div>
 </body>
